--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -13,26 +13,26 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Produtos</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                {% comment %} <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="{% url 'produto:produto_list' %}">Produtos</a>
                     <a class="dropdown-item" href="{% url 'produto:import_csv' %}">Importar CSV</a>
                     <a class="dropdown-item" href="{% url 'produto:export_csv' %}">Exportar CSV</a>
                     <a class="dropdown-item" href="{% url 'produto:import_xlsx' %}">Importar XLSX</a>
                     <a class="dropdown-item" href="{% url 'produto:export_xlsx' %}">Exportar XLSX</a>
                     <a class="dropdown-item" href="{% url 'produto:import_csv_with_pandas' %}">Importar CSV com Pandas</a>
-                </div>
+                </div> {% endcomment %}
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Estoque</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown02">
-                    <a class="dropdown-item" href="{% url 'estoque:estoque_entrada_list' %}">Entrada</a>
-                    <a class="dropdown-item" href="{% url 'estoque:estoque_saida_list' %}">Saída</a>
+                    {% comment %} <a class="dropdown-item" href="{% url 'estoque:estoque_entrada_list' %}">Entrada</a>
+                    <a class="dropdown-item" href="{% url 'estoque:estoque_saida_list' %}">Saída</a> {% endcomment %}
                 </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Protocolo de Entrega</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown03">
-                    <a class="dropdown-item" href="{% url 'estoque:protocolo_de_entrega_list' %}">Entrega</a>
+                    {% comment %} <a class="dropdown-item" href="{% url 'estoque:protocolo_de_entrega_list' %}">Entrega</a> {% endcomment %}
                 </div>
             </li>
         </ul>
